--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "letsencrypt-express": "^2.0.7",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
